Fix 100vh on mobile browsers(again)

--- a/src/index.css
+++ b/src/index.css
@@ -70,11 +70,6 @@
   * {
     @apply border-border;
   }
-
-  html {
-    height: 100%;
-  }
-
   body {
     @apply bg-background text-foreground;
   }
